# foreign-store

./: .gitignore  CHANGELOG.md  LICENSE  README.md  foreign-store.cabal
cbits/: store.c
src/Foreign/: Store.hs
src/Foreign/Store/: Base.hs
