name:                foreign-store
version:             0.0
synopsis:            Store a stable pointer in a foreign context to be retrieved later. Persists through GHCi reloads.
description:         Store a stable pointer in a foreign context to be retrieved later. Persists through GHCi reloads.
license:             BSD3
license-file:        LICENSE
author:              Chris Done
maintainer:          chrisdone@gmail.com
copyright:           2014 Chris Done
category:            Development
build-type:          Simple
cabal-version:       >=1.8

library
  hs-source-dirs:    src/
  ghc-options:       -Wall -O2
  exposed-modules:   Foreign.Store
  build-depends:     base >= 4 && <5
  c-sources:         cbits/store.c
  include-dirs:      cbits
